--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'org.springframework.boot' version '2.4.3'
+	id 'org.springframework.boot' version '2.6.7'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'groovy'
@@ -7,7 +7,11 @@ plugins {
 
 group = 'org.cecil.basic'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = JavaVersion.VERSION_17
+
+def springBootVersion = '2.6.7'
+def spockVersion = '2.1-groovy-3.0'
+def lombokVersion = '1.18.24'
 
 configurations {
 	compileOnly {
@@ -20,14 +24,16 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.flywaydb:flyway-core'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.spockframework:spock-core:1.2-groovy-2.4'
-	testImplementation 'org.spockframework:spock-spring:1.2-groovy-2.4'
+	implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
+	implementation "org.springframework.boot:spring-boot-starter-activemq:${springBootVersion}"
+	implementation 'org.flywaydb:flyway-core:8.5.10'
+
+	compileOnly "org.projectlombok:lombok:${lombokVersion}"
+	runtimeOnly 'com.h2database:h2:2.1.212'
+	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+	testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+	testImplementation "org.spockframework:spock-core:${spockVersion}"
+	testImplementation "org.spockframework:spock-spring:${spockVersion}"
 }
 
 test {
