--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,16 @@
 plugins {
-	id 'org.springframework.boot' version '2.6.7'
+	id 'org.springframework.boot' version '2.7.0'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 	id 'groovy'
+//	id 'org.springframework.experimental.aot' version '0.12.0-SNAPSHOT' // spring native exp
 }
 
 group = 'org.cecil.basic'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_17
 
-def springBootVersion = '2.6.7'
+def springBootVersion = '2.7.0'
 def spockVersion = '2.1-groovy-3.0'
 def lombokVersion = '1.18.24'
 
@@ -25,8 +26,9 @@ repositories {
 
 dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
-	implementation "org.springframework.boot:spring-boot-starter-activemq:${springBootVersion}"
-	implementation 'org.flywaydb:flyway-core:8.5.10'
+	implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
+	implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
+//	implementation 'org.flywaydb:flyway-core:8.5.10'
 
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 	runtimeOnly 'com.h2database:h2:2.1.212'
@@ -36,6 +38,13 @@ dependencies {
 	testImplementation "org.spockframework:spock-spring:${spockVersion}"
 }
 
-test {
+tasks.named('test') {
 	useJUnitPlatform()
 }
+
+// Buildpacks support for building native image
+//tasks.named('bootBuildImage') {
+//	builder = 'paketobuildpacks/builder:tiny'
+//
+//	environment = ['BP_NATIVE_IMAGE': 'true']
+//}
