--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,22 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.0'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '3.0.0'
+	id 'io.spring.dependency-management' version '1.1.0'
 	id 'java'
 	id 'groovy'
-//	id 'org.springframework.experimental.aot' version '0.12.0-SNAPSHOT' // spring native exp
+	id 'io.freefair.lombok' version '6.6.1'
 }
 
 group = 'org.cecil.basic'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_17
 
-def springBootVersion = '2.7.0'
-def spockVersion = '2.1-groovy-3.0'
+def springBootVersion = '3.0.4'
+def springVersion = '6.0.6'
+def spockVersion = '2.3-groovy-4.0'
 def lombokVersion = '1.18.24'
+def groovyVersion = '4.0.6'
+def easyRandomVersion = '5.0.0'
+def javaFakerVersion = '1.0.2'
 
 configurations {
 	compileOnly {
@@ -25,26 +29,19 @@ repositories {
 }
 
 dependencies {
-	implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
-	implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
-	implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
-//	implementation 'org.flywaydb:flyway-core:8.5.10'
-
+	implementation "org.apache.groovy:groovy:${groovyVersion}"
+	implementation "org.springframework.boot:spring-boot-starter:${springBootVersion}"
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
-	runtimeOnly 'com.h2database:h2:2.1.212'
 	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 	testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
-	testImplementation "org.spockframework:spock-core:${spockVersion}"
+	testImplementation("org.spockframework:spock-core:${spockVersion}") {
+		exclude group: 'org.codehaus.groovy'
+	}
 	testImplementation "org.spockframework:spock-spring:${spockVersion}"
+	testImplementation "org.jeasy:easy-random-core:${easyRandomVersion}"
+	testImplementation "com.github.javafaker:javafaker:${javaFakerVersion}"
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
-
-// Buildpacks support for building native image
-//tasks.named('bootBuildImage') {
-//	builder = 'paketobuildpacks/builder:tiny'
-//
-//	environment = ['BP_NATIVE_IMAGE': 'true']
-//}
